Faltou uma linha

--- a/index.html
+++ b/index.html
@@ -483,6 +483,8 @@
                             </div>
                         </div>
 
+                        <div class="linha"></div>
+
                         <div class="ultimaNoticiasDireitaDiv">
                             <div class="g1QuartaParte gshow">
 
